--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>test page</title>
 </head>
 <body>
+<button id="search"></button>
 
 <script src='http://code.jquery.com/jquery-2.1.3.min.js'></script>
 <script type="text/javascript" src="assets/js/api.js"></script>
