--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
-<<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>test page</title>
+    <title>Video Game Trivia</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
 </head>
+
 <body>
+    <div id="wrapper">
+        <div class="container">
 
-<script src='http://code.jquery.com/jquery-2.1.3.min.js'></script>
-<script type="text/javascript" src="assets/js/api.js"></script>
+            <div class="jumbotron">
+              <h1>NYTimes Search</h1>
+            </div>
 
+            <div class="panel panel-default" align="left">
+              <div class="panel-heading">Search Parameters</div>
+                <div class="panel-body">
+                  <p>...</p>
+            </div>
+                  <p class="input-titles" > Search Term</p>
+                  <input  size="185"id="search-term"></input><br>
+                  <p class="input-titles" > Number of Records to Retrieve</p>
+                  <input  size="185" id="number-responses"></input><br>
+                  <p class="input-titles" > Start Year (Optional)</p>
+                  <input  size="185" id="start-year"></input><br>
+                  <p class="input-titles" > End Year (Optional)</p>
+                  <input  size="185" id="end-year"></input>
+            </div>
+      </div>
+</div>
+  
+  
+    <script src="https://code.jquery.com/jquery-2.2.0.js" type="text/javascript"></script>
+    <script src="assets/javascript/app.js" type="text/javascript"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    
 </body>
 </html>
