--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Chela+One" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +19,7 @@
         <div class="container">
 
             <div class="jumbotron title" align="center" id="page-title">
-              <h1><i class="fa fa-newspaper-o"></i> New York Times Search</h1>
+              <h1 id="title-text"><i class="fa fa-newspaper-o"></i> New York Times Search</h1>
             </div>
 
             <div class="panel panel-default" align="left">
@@ -31,7 +32,7 @@
                   
                   <p class="input-titles">Number of Records to Retrieve:</p>
                   <div class="input-group input-group-md inputBox">
-                    <input id="number-responses" class="form-control" placeholder="" aria-describedby="sizing-addon1">
+                    <input id="number-responses" class="form-control" placeholder="1 - 10" aria-describedby="sizing-addon1">
                   </div>
                   <p class="input-titles">Start Year (Optional):</p>
                   <div class="input-group input-group-md inputBox">
